[tool.poetry]
name = "hactl"
version = "0.1.0"
description = ""
authors = ["gwisp2 <60121533+gwisp2@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
rich = "^12.5.1"
pydantic = "^1.9.2"
pydantic-yaml = {extras = ["ruamel"], version = "^0.8.0"}
textual = "^0.1.18"
debugpy = "^1.6.3"
GitPython = "^3.1.27"

[tool.isort]
profile = "black"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = "^22.6.0"
isort = "^5.10.1"
types-requests = "^2.28.8"
flake8 = "^5.0.4"
pylint = "^2.14.5"

[tool.poe.tasks]
isort = "isort hactl"
black = "black hactl"
format = ["isort", "black"]
flake8 = "flake8 hactl"
pylint = "pylint hactl"
lint = ["mypy", "flake8", "pylint"]

[tool.poe.tasks.mypy]
cmd = "mypy --strict --python-executable=./.venv/bin/python hactl"
env = { MYPYPATH = "../hactl-stubs" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hactl = 'hactl.__main__:main'
